# minimail

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  sqlx-data.json
.github/workflows/: build.yml
config/: base.yaml  local.yaml  log4rs.yaml
migrations/: 20221211015709_subscribers.sql
src/: config.rs  data.rs  lib.rs  main.rs  startup.rs
src/auth/: admin.rs  mod.rs
src/config/: admin_settings.rs  application_settings.rs  database_settings.rs  environment.rs  mailer_settings.rs  mod.rs  settings.rs  subscribed_settings.rs
src/db/: mod.rs  setup.rs
src/logging/: mod.rs  setup.rs
src/mail/: mod.rs  send_mail.rs
src/mail/send_grid/: mod.rs  send_grid_mail.rs
src/model/: email.rs  mod.rs  subscriber.rs
src/routes/: mod.rs  subscribers.rs
src/store/: mod.rs  subscriber_store.rs
src/store/memory/: mod.rs  subscriber_store.rs
src/store/postgres/: mod.rs  subscriber_store.rs
src/store/sqlite/: mod.rs  subscriber_store.rs
tests/api/: main.rs  subscribers.rs
