[package]
name = "minimail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
log = "0.4"
log4rs = { version = "1.2", features = [ "background_rotation" ] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "offline" ] }
tokio = { version = "1.0", features = ["full"] }
