[package]
name = "minimail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = [ "form", "headers" ] }
anyhow = "1.0"
log = "0.4"
log4rs = { version = "1.2", features = [ "background_rotation" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "offline", "migrate", "postgres" ] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
reqwest = "0.11"
